// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react-compiler > should compile identifiers 1`] = `
Node {
  "comments": [],
  "end": 508,
  "errors": [],
  "loc": SourceLocation {
    "end": Position {
      "column": 6,
      "index": 508,
      "line": 20,
    },
    "filename": undefined,
    "identifierName": undefined,
    "start": Position {
      "column": 0,
      "index": 0,
      "line": 1,
    },
  },
  "program": Node {
    "body": [
      Node {
        "end": 49,
        "loc": SourceLocation {
          "end": Position {
            "column": 48,
            "index": 49,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 9,
            "line": 2,
          },
        },
        "source": Node {
          "end": 48,
          "extra": {
            "raw": "'react'",
            "rawValue": "react",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 47,
              "index": 48,
              "line": 2,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 40,
              "index": 41,
              "line": 2,
            },
          },
          "start": 41,
          "type": "StringLiteral",
          "value": "react",
        },
        "specifiers": [
          Node {
            "end": 21,
            "loc": SourceLocation {
              "end": Position {
                "column": 20,
                "index": 21,
                "line": 2,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 15,
                "index": 16,
                "line": 2,
              },
            },
            "local": Node {
              "end": 21,
              "loc": SourceLocation {
                "end": Position {
                  "column": 20,
                  "index": 21,
                  "line": 2,
                },
                "filename": undefined,
                "identifierName": "React",
                "start": Position {
                  "column": 15,
                  "index": 16,
                  "line": 2,
                },
              },
              "name": "React",
              "start": 16,
              "type": "Identifier",
            },
            "start": 16,
            "type": "ImportDefaultSpecifier",
          },
          Node {
            "end": 33,
            "imported": Node {
              "end": 33,
              "loc": SourceLocation {
                "end": Position {
                  "column": 32,
                  "index": 33,
                  "line": 2,
                },
                "filename": undefined,
                "identifierName": "useState",
                "start": Position {
                  "column": 24,
                  "index": 25,
                  "line": 2,
                },
              },
              "name": "useState",
              "start": 25,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 32,
                "index": 33,
                "line": 2,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 24,
                "index": 25,
                "line": 2,
              },
            },
            "local": Node {
              "end": 33,
              "extra": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 32,
                  "index": 33,
                  "line": 2,
                },
                "filename": undefined,
                "identifierName": "useState",
                "start": Position {
                  "column": 24,
                  "index": 25,
                  "line": 2,
                },
              },
              "name": "useState",
              "range": undefined,
              "start": 25,
              "type": "Identifier",
            },
            "start": 25,
            "type": "ImportSpecifier",
          },
        ],
        "start": 9,
        "type": "ImportDeclaration",
      },
      Node {
        "end": 104,
        "loc": SourceLocation {
          "end": Position {
            "column": 54,
            "index": 104,
            "line": 3,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 58,
            "line": 3,
          },
        },
        "source": Node {
          "end": 103,
          "extra": {
            "raw": "'react-dom/client'",
            "rawValue": "react-dom/client",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 53,
              "index": 103,
              "line": 3,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 35,
              "index": 85,
              "line": 3,
            },
          },
          "start": 85,
          "type": "StringLiteral",
          "value": "react-dom/client",
        },
        "specifiers": [
          Node {
            "end": 77,
            "imported": Node {
              "end": 77,
              "loc": SourceLocation {
                "end": Position {
                  "column": 27,
                  "index": 77,
                  "line": 3,
                },
                "filename": undefined,
                "identifierName": "createRoot",
                "start": Position {
                  "column": 17,
                  "index": 67,
                  "line": 3,
                },
              },
              "name": "createRoot",
              "start": 67,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 27,
                "index": 77,
                "line": 3,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 17,
                "index": 67,
                "line": 3,
              },
            },
            "local": Node {
              "end": 77,
              "extra": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 27,
                  "index": 77,
                  "line": 3,
                },
                "filename": undefined,
                "identifierName": "createRoot",
                "start": Position {
                  "column": 17,
                  "index": 67,
                  "line": 3,
                },
              },
              "name": "createRoot",
              "range": undefined,
              "start": 67,
              "type": "Identifier",
            },
            "start": 67,
            "type": "ImportSpecifier",
          },
        ],
        "start": 58,
        "type": "ImportDeclaration",
      },
      Node {
        "end": 151,
        "loc": SourceLocation {
          "end": Position {
            "column": 46,
            "index": 151,
            "line": 4,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 113,
            "line": 4,
          },
        },
        "source": Node {
          "end": 150,
          "extra": {
            "raw": "'million/react'",
            "rawValue": "million/react",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 45,
              "index": 150,
              "line": 4,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 30,
              "index": 135,
              "line": 4,
            },
          },
          "start": 135,
          "type": "StringLiteral",
          "value": "million/react",
        },
        "specifiers": [
          Node {
            "end": 127,
            "imported": Node {
              "end": 127,
              "loc": SourceLocation {
                "end": Position {
                  "column": 22,
                  "index": 127,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": "block",
                "start": Position {
                  "column": 17,
                  "index": 122,
                  "line": 4,
                },
              },
              "name": "block",
              "start": 122,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 22,
                "index": 127,
                "line": 4,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 17,
                "index": 122,
                "line": 4,
              },
            },
            "local": Node {
              "end": 127,
              "extra": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 22,
                  "index": 127,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": "block",
                "start": Position {
                  "column": 17,
                  "index": 122,
                  "line": 4,
                },
              },
              "name": "block",
              "range": undefined,
              "start": 122,
              "type": "Identifier",
            },
            "start": 122,
            "type": "ImportSpecifier",
          },
        ],
        "start": 113,
        "type": "ImportDeclaration",
      },
      Node {
        "async": false,
        "body": Node {
          "body": [
            Node {
              "declarations": [
                Node {
                  "end": 228,
                  "id": Node {
                    "end": 211,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 27,
                        "index": 211,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": "handleClick",
                      "start": Position {
                        "column": 16,
                        "index": 200,
                        "line": 7,
                      },
                    },
                    "name": "handleClick",
                    "start": 200,
                    "type": "Identifier",
                  },
                  "init": Node {
                    "async": false,
                    "body": Node {
                      "arguments": [
                        Node {
                          "end": 227,
                          "extra": {
                            "raw": "1",
                            "rawValue": 1,
                          },
                          "loc": SourceLocation {
                            "end": Position {
                              "column": 43,
                              "index": 227,
                              "line": 7,
                            },
                            "filename": undefined,
                            "identifierName": undefined,
                            "start": Position {
                              "column": 42,
                              "index": 226,
                              "line": 7,
                            },
                          },
                          "start": 226,
                          "type": "NumericLiteral",
                          "value": 1,
                        },
                      ],
                      "callee": Node {
                        "end": 225,
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 41,
                            "index": 225,
                            "line": 7,
                          },
                          "filename": undefined,
                          "identifierName": "alert",
                          "start": Position {
                            "column": 36,
                            "index": 220,
                            "line": 7,
                          },
                        },
                        "name": "alert",
                        "start": 220,
                        "type": "Identifier",
                      },
                      "end": 228,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 44,
                          "index": 228,
                          "line": 7,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 36,
                          "index": 220,
                          "line": 7,
                        },
                      },
                      "start": 220,
                      "type": "CallExpression",
                    },
                    "end": 228,
                    "generator": false,
                    "id": null,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 44,
                        "index": 228,
                        "line": 7,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 30,
                        "index": 214,
                        "line": 7,
                      },
                    },
                    "params": [],
                    "start": 214,
                    "type": "ArrowFunctionExpression",
                  },
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 44,
                      "index": 228,
                      "line": 7,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 16,
                      "index": 200,
                      "line": 7,
                    },
                  },
                  "start": 200,
                  "type": "VariableDeclarator",
                },
              ],
              "end": 229,
              "kind": "const",
              "loc": SourceLocation {
                "end": Position {
                  "column": 45,
                  "index": 229,
                  "line": 7,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 194,
                  "line": 7,
                },
              },
              "start": 194,
              "type": "VariableDeclaration",
            },
            Node {
              "argument": Node {
                "children": [
                  Node {
                    "end": 321,
                    "extra": {
                      "raw": "
              Alert
            ",
                      "rawValue": "
              Alert
            ",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 12,
                        "index": 321,
                        "line": 11,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 39,
                        "index": 288,
                        "line": 9,
                      },
                    },
                    "start": 288,
                    "type": "JSXText",
                    "value": "
              Alert
            ",
                  },
                ],
                "closingElement": Node {
                  "end": 327,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 18,
                      "index": 327,
                      "line": 11,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 12,
                      "index": 321,
                      "line": 11,
                    },
                  },
                  "name": Node {
                    "end": 326,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 17,
                        "index": 326,
                        "line": 11,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 14,
                        "index": 323,
                        "line": 11,
                      },
                    },
                    "name": "div",
                    "start": 323,
                    "type": "JSXIdentifier",
                  },
                  "start": 321,
                  "type": "JSXClosingElement",
                },
                "end": 327,
                "extra": {
                  "parenStart": 247,
                  "parenthesized": true,
                },
                "loc": SourceLocation {
                  "end": Position {
                    "column": 18,
                    "index": 327,
                    "line": 11,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 12,
                    "index": 261,
                    "line": 9,
                  },
                },
                "openingElement": Node {
                  "attributes": [
                    Node {
                      "end": 287,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 38,
                          "index": 287,
                          "line": 9,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 17,
                          "index": 266,
                          "line": 9,
                        },
                      },
                      "name": Node {
                        "end": 273,
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 24,
                            "index": 273,
                            "line": 9,
                          },
                          "filename": undefined,
                          "identifierName": undefined,
                          "start": Position {
                            "column": 17,
                            "index": 266,
                            "line": 9,
                          },
                        },
                        "name": "onClick",
                        "start": 266,
                        "type": "JSXIdentifier",
                      },
                      "start": 266,
                      "type": "JSXAttribute",
                      "value": Node {
                        "end": 287,
                        "expression": Node {
                          "end": 286,
                          "loc": SourceLocation {
                            "end": Position {
                              "column": 37,
                              "index": 286,
                              "line": 9,
                            },
                            "filename": undefined,
                            "identifierName": "handleClick",
                            "start": Position {
                              "column": 26,
                              "index": 275,
                              "line": 9,
                            },
                          },
                          "name": "handleClick",
                          "start": 275,
                          "type": "Identifier",
                        },
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 38,
                            "index": 287,
                            "line": 9,
                          },
                          "filename": undefined,
                          "identifierName": undefined,
                          "start": Position {
                            "column": 25,
                            "index": 274,
                            "line": 9,
                          },
                        },
                        "start": 274,
                        "type": "JSXExpressionContainer",
                      },
                    },
                  ],
                  "end": 288,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 39,
                      "index": 288,
                      "line": 9,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 12,
                      "index": 261,
                      "line": 9,
                    },
                  },
                  "name": Node {
                    "end": 265,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 16,
                        "index": 265,
                        "line": 9,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 262,
                        "line": 9,
                      },
                    },
                    "name": "div",
                    "start": 262,
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "start": 261,
                  "type": "JSXOpeningElement",
                },
                "start": 261,
                "type": "JSXElement",
              },
              "end": 340,
              "loc": SourceLocation {
                "end": Position {
                  "column": 12,
                  "index": 340,
                  "line": 12,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 240,
                  "line": 8,
                },
              },
              "start": 240,
              "type": "ReturnStatement",
            },
          ],
          "directives": [],
          "end": 350,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "index": 350,
              "line": 13,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 29,
              "index": 182,
              "line": 6,
            },
          },
          "start": 182,
          "type": "BlockStatement",
        },
        "end": 350,
        "generator": false,
        "id": Node {
          "end": 179,
          "loc": SourceLocation {
            "end": Position {
              "column": 26,
              "index": 179,
              "line": 6,
            },
            "filename": undefined,
            "identifierName": "Component",
            "start": Position {
              "column": 17,
              "index": 170,
              "line": 6,
            },
          },
          "name": "Component",
          "start": 170,
          "type": "Identifier",
        },
        "loc": SourceLocation {
          "end": Position {
            "column": 9,
            "index": 350,
            "line": 13,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 161,
            "line": 6,
          },
        },
        "params": [],
        "start": 161,
        "type": "FunctionDeclaration",
      },
      Node {
        "declarations": [
          Node {
            "end": 399,
            "id": Node {
              "end": 380,
              "loc": SourceLocation {
                "end": Position {
                  "column": 28,
                  "index": 380,
                  "line": 15,
                },
                "filename": undefined,
                "identifierName": "ComponentBlock",
                "start": Position {
                  "column": 14,
                  "index": 366,
                  "line": 15,
                },
              },
              "name": "ComponentBlock",
              "start": 366,
              "type": "Identifier",
            },
            "init": Node {
              "arguments": [
                Node {
                  "end": 398,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 46,
                      "index": 398,
                      "line": 15,
                    },
                    "filename": undefined,
                    "identifierName": "Component",
                    "start": Position {
                      "column": 37,
                      "index": 389,
                      "line": 15,
                    },
                  },
                  "name": "Component",
                  "start": 389,
                  "type": "Identifier",
                },
              ],
              "callee": Node {
                "end": 388,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 36,
                    "index": 388,
                    "line": 15,
                  },
                  "filename": undefined,
                  "identifierName": "block",
                  "start": Position {
                    "column": 31,
                    "index": 383,
                    "line": 15,
                  },
                },
                "name": "block",
                "start": 383,
                "type": "Identifier",
              },
              "end": 399,
              "loc": SourceLocation {
                "end": Position {
                  "column": 47,
                  "index": 399,
                  "line": 15,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 31,
                  "index": 383,
                  "line": 15,
                },
              },
              "start": 383,
              "type": "CallExpression",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 47,
                "index": 399,
                "line": 15,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 14,
                "index": 366,
                "line": 15,
              },
            },
            "start": 366,
            "type": "VariableDeclarator",
          },
        ],
        "end": 400,
        "kind": "const",
        "loc": SourceLocation {
          "end": Position {
            "column": 48,
            "index": 400,
            "line": 15,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 360,
            "line": 15,
          },
        },
        "start": 360,
        "type": "VariableDeclaration",
      },
      Node {
        "end": 501,
        "expression": Node {
          "arguments": [
            Node {
              "children": [],
              "closingElement": null,
              "end": 490,
              "loc": SourceLocation {
                "end": Position {
                  "column": 28,
                  "index": 490,
                  "line": 18,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 472,
                  "line": 18,
                },
              },
              "openingElement": Node {
                "attributes": [],
                "end": 490,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 28,
                    "index": 490,
                    "line": 18,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 10,
                    "index": 472,
                    "line": 18,
                  },
                },
                "name": Node {
                  "end": 487,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 25,
                      "index": 487,
                      "line": 18,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 11,
                      "index": 473,
                      "line": 18,
                    },
                  },
                  "name": "ComponentBlock",
                  "start": 473,
                  "type": "JSXIdentifier",
                },
                "selfClosing": true,
                "start": 472,
                "type": "JSXOpeningElement",
              },
              "start": 472,
              "type": "JSXElement",
            },
          ],
          "callee": Node {
            "computed": false,
            "end": 460,
            "loc": SourceLocation {
              "end": Position {
                "column": 58,
                "index": 460,
                "line": 17,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 8,
                "index": 410,
                "line": 17,
              },
            },
            "object": Node {
              "arguments": [
                Node {
                  "arguments": [
                    Node {
                      "end": 451,
                      "extra": {
                        "raw": "'root'",
                        "rawValue": "root",
                      },
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 49,
                          "index": 451,
                          "line": 17,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 43,
                          "index": 445,
                          "line": 17,
                        },
                      },
                      "start": 445,
                      "type": "StringLiteral",
                      "value": "root",
                    },
                  ],
                  "callee": Node {
                    "computed": false,
                    "end": 444,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 42,
                        "index": 444,
                        "line": 17,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 19,
                        "index": 421,
                        "line": 17,
                      },
                    },
                    "object": Node {
                      "end": 429,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 27,
                          "index": 429,
                          "line": 17,
                        },
                        "filename": undefined,
                        "identifierName": "document",
                        "start": Position {
                          "column": 19,
                          "index": 421,
                          "line": 17,
                        },
                      },
                      "name": "document",
                      "start": 421,
                      "type": "Identifier",
                    },
                    "property": Node {
                      "end": 444,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 42,
                          "index": 444,
                          "line": 17,
                        },
                        "filename": undefined,
                        "identifierName": "getElementById",
                        "start": Position {
                          "column": 28,
                          "index": 430,
                          "line": 17,
                        },
                      },
                      "name": "getElementById",
                      "start": 430,
                      "type": "Identifier",
                    },
                    "start": 421,
                    "type": "MemberExpression",
                  },
                  "end": 452,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 50,
                      "index": 452,
                      "line": 17,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 19,
                      "index": 421,
                      "line": 17,
                    },
                  },
                  "start": 421,
                  "type": "CallExpression",
                },
              ],
              "callee": Node {
                "end": 420,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 18,
                    "index": 420,
                    "line": 17,
                  },
                  "filename": undefined,
                  "identifierName": "createRoot",
                  "start": Position {
                    "column": 8,
                    "index": 410,
                    "line": 17,
                  },
                },
                "name": "createRoot",
                "start": 410,
                "type": "Identifier",
              },
              "end": 453,
              "loc": SourceLocation {
                "end": Position {
                  "column": 51,
                  "index": 453,
                  "line": 17,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 8,
                  "index": 410,
                  "line": 17,
                },
              },
              "start": 410,
              "type": "CallExpression",
            },
            "property": Node {
              "end": 460,
              "loc": SourceLocation {
                "end": Position {
                  "column": 58,
                  "index": 460,
                  "line": 17,
                },
                "filename": undefined,
                "identifierName": "render",
                "start": Position {
                  "column": 52,
                  "index": 454,
                  "line": 17,
                },
              },
              "name": "render",
              "start": 454,
              "type": "Identifier",
            },
            "start": 410,
            "type": "MemberExpression",
          },
          "end": 500,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "index": 500,
              "line": 19,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 8,
              "index": 410,
              "line": 17,
            },
          },
          "start": 410,
          "type": "CallExpression",
        },
        "loc": SourceLocation {
          "end": Position {
            "column": 10,
            "index": 501,
            "line": 19,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 410,
            "line": 17,
          },
        },
        "start": 410,
        "type": "ExpressionStatement",
      },
    ],
    "directives": [],
    "end": 508,
    "interpreter": null,
    "loc": SourceLocation {
      "end": Position {
        "column": 6,
        "index": 508,
        "line": 20,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 0,
        "line": 1,
      },
    },
    "sourceType": "module",
    "start": 0,
    "type": "Program",
  },
  "start": 0,
  "type": "File",
}
`;

exports[`react-compiler > should compile objects 1`] = `
Node {
  "comments": [],
  "end": 483,
  "errors": [],
  "loc": SourceLocation {
    "end": Position {
      "column": 6,
      "index": 483,
      "line": 19,
    },
    "filename": undefined,
    "identifierName": undefined,
    "start": Position {
      "column": 0,
      "index": 0,
      "line": 1,
    },
  },
  "program": Node {
    "body": [
      Node {
        "end": 49,
        "loc": SourceLocation {
          "end": Position {
            "column": 48,
            "index": 49,
            "line": 2,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 9,
            "line": 2,
          },
        },
        "source": Node {
          "end": 48,
          "extra": {
            "raw": "'react'",
            "rawValue": "react",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 47,
              "index": 48,
              "line": 2,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 40,
              "index": 41,
              "line": 2,
            },
          },
          "start": 41,
          "type": "StringLiteral",
          "value": "react",
        },
        "specifiers": [
          Node {
            "end": 21,
            "loc": SourceLocation {
              "end": Position {
                "column": 20,
                "index": 21,
                "line": 2,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 15,
                "index": 16,
                "line": 2,
              },
            },
            "local": Node {
              "end": 21,
              "loc": SourceLocation {
                "end": Position {
                  "column": 20,
                  "index": 21,
                  "line": 2,
                },
                "filename": undefined,
                "identifierName": "React",
                "start": Position {
                  "column": 15,
                  "index": 16,
                  "line": 2,
                },
              },
              "name": "React",
              "start": 16,
              "type": "Identifier",
            },
            "start": 16,
            "type": "ImportDefaultSpecifier",
          },
          Node {
            "end": 33,
            "imported": Node {
              "end": 33,
              "loc": SourceLocation {
                "end": Position {
                  "column": 32,
                  "index": 33,
                  "line": 2,
                },
                "filename": undefined,
                "identifierName": "useState",
                "start": Position {
                  "column": 24,
                  "index": 25,
                  "line": 2,
                },
              },
              "name": "useState",
              "start": 25,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 32,
                "index": 33,
                "line": 2,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 24,
                "index": 25,
                "line": 2,
              },
            },
            "local": Node {
              "end": 33,
              "extra": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 32,
                  "index": 33,
                  "line": 2,
                },
                "filename": undefined,
                "identifierName": "useState",
                "start": Position {
                  "column": 24,
                  "index": 25,
                  "line": 2,
                },
              },
              "name": "useState",
              "range": undefined,
              "start": 25,
              "type": "Identifier",
            },
            "start": 25,
            "type": "ImportSpecifier",
          },
        ],
        "start": 9,
        "type": "ImportDeclaration",
      },
      Node {
        "end": 104,
        "loc": SourceLocation {
          "end": Position {
            "column": 54,
            "index": 104,
            "line": 3,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 58,
            "line": 3,
          },
        },
        "source": Node {
          "end": 103,
          "extra": {
            "raw": "'react-dom/client'",
            "rawValue": "react-dom/client",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 53,
              "index": 103,
              "line": 3,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 35,
              "index": 85,
              "line": 3,
            },
          },
          "start": 85,
          "type": "StringLiteral",
          "value": "react-dom/client",
        },
        "specifiers": [
          Node {
            "end": 77,
            "imported": Node {
              "end": 77,
              "loc": SourceLocation {
                "end": Position {
                  "column": 27,
                  "index": 77,
                  "line": 3,
                },
                "filename": undefined,
                "identifierName": "createRoot",
                "start": Position {
                  "column": 17,
                  "index": 67,
                  "line": 3,
                },
              },
              "name": "createRoot",
              "start": 67,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 27,
                "index": 77,
                "line": 3,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 17,
                "index": 67,
                "line": 3,
              },
            },
            "local": Node {
              "end": 77,
              "extra": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 27,
                  "index": 77,
                  "line": 3,
                },
                "filename": undefined,
                "identifierName": "createRoot",
                "start": Position {
                  "column": 17,
                  "index": 67,
                  "line": 3,
                },
              },
              "name": "createRoot",
              "range": undefined,
              "start": 67,
              "type": "Identifier",
            },
            "start": 67,
            "type": "ImportSpecifier",
          },
        ],
        "start": 58,
        "type": "ImportDeclaration",
      },
      Node {
        "end": 151,
        "loc": SourceLocation {
          "end": Position {
            "column": 46,
            "index": 151,
            "line": 4,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 113,
            "line": 4,
          },
        },
        "source": Node {
          "end": 150,
          "extra": {
            "raw": "'million/react'",
            "rawValue": "million/react",
          },
          "loc": SourceLocation {
            "end": Position {
              "column": 45,
              "index": 150,
              "line": 4,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 30,
              "index": 135,
              "line": 4,
            },
          },
          "start": 135,
          "type": "StringLiteral",
          "value": "million/react",
        },
        "specifiers": [
          Node {
            "end": 127,
            "imported": Node {
              "end": 127,
              "loc": SourceLocation {
                "end": Position {
                  "column": 22,
                  "index": 127,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": "block",
                "start": Position {
                  "column": 17,
                  "index": 122,
                  "line": 4,
                },
              },
              "name": "block",
              "start": 122,
              "type": "Identifier",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 22,
                "index": 127,
                "line": 4,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 17,
                "index": 122,
                "line": 4,
              },
            },
            "local": Node {
              "end": 127,
              "extra": undefined,
              "loc": SourceLocation {
                "end": Position {
                  "column": 22,
                  "index": 127,
                  "line": 4,
                },
                "filename": undefined,
                "identifierName": "block",
                "start": Position {
                  "column": 17,
                  "index": 122,
                  "line": 4,
                },
              },
              "name": "block",
              "range": undefined,
              "start": 122,
              "type": "Identifier",
            },
            "start": 122,
            "type": "ImportSpecifier",
          },
        ],
        "start": 113,
        "type": "ImportDeclaration",
      },
      Node {
        "async": false,
        "body": Node {
          "body": [
            Node {
              "argument": Node {
                "children": [
                  Node {
                    "end": 245,
                    "extra": {
                      "raw": "
              ",
                      "rawValue": "
              ",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 14,
                        "index": 245,
                        "line": 9,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 17,
                        "index": 230,
                        "line": 8,
                      },
                    },
                    "start": 230,
                    "type": "JSXText",
                    "value": "
              ",
                  },
                  Node {
                    "end": 258,
                    "expression": Node {
                      "computed": false,
                      "end": 257,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 26,
                          "index": 257,
                          "line": 9,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 15,
                          "index": 246,
                          "line": 9,
                        },
                      },
                      "object": Node {
                        "end": 252,
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 21,
                            "index": 252,
                            "line": 9,
                          },
                          "filename": undefined,
                          "identifierName": "object",
                          "start": Position {
                            "column": 15,
                            "index": 246,
                            "line": 9,
                          },
                        },
                        "name": "object",
                        "start": 246,
                        "type": "Identifier",
                      },
                      "property": Node {
                        "end": 257,
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 26,
                            "index": 257,
                            "line": 9,
                          },
                          "filename": undefined,
                          "identifierName": "name",
                          "start": Position {
                            "column": 22,
                            "index": 253,
                            "line": 9,
                          },
                        },
                        "name": "name",
                        "start": 253,
                        "type": "Identifier",
                      },
                      "start": 246,
                      "type": "MemberExpression",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 27,
                        "index": 258,
                        "line": 9,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 14,
                        "index": 245,
                        "line": 9,
                      },
                    },
                    "start": 245,
                    "type": "JSXExpressionContainer",
                  },
                  Node {
                    "end": 271,
                    "extra": {
                      "raw": "
            ",
                      "rawValue": "
            ",
                    },
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 12,
                        "index": 271,
                        "line": 10,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 27,
                        "index": 258,
                        "line": 9,
                      },
                    },
                    "start": 258,
                    "type": "JSXText",
                    "value": "
            ",
                  },
                ],
                "closingElement": Node {
                  "end": 277,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 18,
                      "index": 277,
                      "line": 10,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 12,
                      "index": 271,
                      "line": 10,
                    },
                  },
                  "name": Node {
                    "end": 276,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 17,
                        "index": 276,
                        "line": 10,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 14,
                        "index": 273,
                        "line": 10,
                      },
                    },
                    "name": "div",
                    "start": 273,
                    "type": "JSXIdentifier",
                  },
                  "start": 271,
                  "type": "JSXClosingElement",
                },
                "end": 277,
                "extra": {
                  "parenStart": 211,
                  "parenthesized": true,
                },
                "loc": SourceLocation {
                  "end": Position {
                    "column": 18,
                    "index": 277,
                    "line": 10,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 12,
                    "index": 225,
                    "line": 8,
                  },
                },
                "openingElement": Node {
                  "attributes": [],
                  "end": 230,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 17,
                      "index": 230,
                      "line": 8,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 12,
                      "index": 225,
                      "line": 8,
                    },
                  },
                  "name": Node {
                    "end": 229,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 16,
                        "index": 229,
                        "line": 8,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 13,
                        "index": 226,
                        "line": 8,
                      },
                    },
                    "name": "div",
                    "start": 226,
                    "type": "JSXIdentifier",
                  },
                  "selfClosing": false,
                  "start": 225,
                  "type": "JSXOpeningElement",
                },
                "start": 225,
                "type": "JSXElement",
              },
              "end": 290,
              "loc": SourceLocation {
                "end": Position {
                  "column": 12,
                  "index": 290,
                  "line": 11,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 204,
                  "line": 7,
                },
              },
              "start": 204,
              "type": "ReturnStatement",
            },
          ],
          "directives": [],
          "end": 300,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "index": 300,
              "line": 12,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 39,
              "index": 192,
              "line": 6,
            },
          },
          "start": 192,
          "type": "BlockStatement",
        },
        "end": 300,
        "generator": false,
        "id": Node {
          "end": 179,
          "loc": SourceLocation {
            "end": Position {
              "column": 26,
              "index": 179,
              "line": 6,
            },
            "filename": undefined,
            "identifierName": "Component",
            "start": Position {
              "column": 17,
              "index": 170,
              "line": 6,
            },
          },
          "name": "Component",
          "start": 170,
          "type": "Identifier",
        },
        "loc": SourceLocation {
          "end": Position {
            "column": 9,
            "index": 300,
            "line": 12,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 161,
            "line": 6,
          },
        },
        "params": [
          Node {
            "end": 190,
            "loc": SourceLocation {
              "end": Position {
                "column": 37,
                "index": 190,
                "line": 6,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 27,
                "index": 180,
                "line": 6,
              },
            },
            "properties": [
              Node {
                "computed": false,
                "end": 188,
                "extra": {
                  "shorthand": true,
                },
                "key": Node {
                  "end": 188,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 35,
                      "index": 188,
                      "line": 6,
                    },
                    "filename": undefined,
                    "identifierName": "object",
                    "start": Position {
                      "column": 29,
                      "index": 182,
                      "line": 6,
                    },
                  },
                  "name": "object",
                  "start": 182,
                  "type": "Identifier",
                },
                "loc": SourceLocation {
                  "end": Position {
                    "column": 35,
                    "index": 188,
                    "line": 6,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 29,
                    "index": 182,
                    "line": 6,
                  },
                },
                "method": false,
                "shorthand": true,
                "start": 182,
                "type": "ObjectProperty",
                "value": Node {
                  "end": 188,
                  "extra": undefined,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 35,
                      "index": 188,
                      "line": 6,
                    },
                    "filename": undefined,
                    "identifierName": "object",
                    "start": Position {
                      "column": 29,
                      "index": 182,
                      "line": 6,
                    },
                  },
                  "name": "object",
                  "range": undefined,
                  "start": 182,
                  "type": "Identifier",
                },
              },
            ],
            "start": 180,
            "type": "ObjectPattern",
          },
        ],
        "start": 161,
        "type": "FunctionDeclaration",
      },
      Node {
        "declarations": [
          Node {
            "end": 349,
            "id": Node {
              "end": 330,
              "loc": SourceLocation {
                "end": Position {
                  "column": 28,
                  "index": 330,
                  "line": 14,
                },
                "filename": undefined,
                "identifierName": "ComponentBlock",
                "start": Position {
                  "column": 14,
                  "index": 316,
                  "line": 14,
                },
              },
              "name": "ComponentBlock",
              "start": 316,
              "type": "Identifier",
            },
            "init": Node {
              "arguments": [
                Node {
                  "end": 348,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 46,
                      "index": 348,
                      "line": 14,
                    },
                    "filename": undefined,
                    "identifierName": "Component",
                    "start": Position {
                      "column": 37,
                      "index": 339,
                      "line": 14,
                    },
                  },
                  "name": "Component",
                  "start": 339,
                  "type": "Identifier",
                },
              ],
              "callee": Node {
                "end": 338,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 36,
                    "index": 338,
                    "line": 14,
                  },
                  "filename": undefined,
                  "identifierName": "block",
                  "start": Position {
                    "column": 31,
                    "index": 333,
                    "line": 14,
                  },
                },
                "name": "block",
                "start": 333,
                "type": "Identifier",
              },
              "end": 349,
              "loc": SourceLocation {
                "end": Position {
                  "column": 47,
                  "index": 349,
                  "line": 14,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 31,
                  "index": 333,
                  "line": 14,
                },
              },
              "start": 333,
              "type": "CallExpression",
            },
            "loc": SourceLocation {
              "end": Position {
                "column": 47,
                "index": 349,
                "line": 14,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 14,
                "index": 316,
                "line": 14,
              },
            },
            "start": 316,
            "type": "VariableDeclarator",
          },
        ],
        "end": 350,
        "kind": "const",
        "loc": SourceLocation {
          "end": Position {
            "column": 48,
            "index": 350,
            "line": 14,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 310,
            "line": 14,
          },
        },
        "start": 310,
        "type": "VariableDeclaration",
      },
      Node {
        "end": 476,
        "expression": Node {
          "arguments": [
            Node {
              "children": [],
              "closingElement": null,
              "end": 465,
              "loc": SourceLocation {
                "end": Position {
                  "column": 53,
                  "index": 465,
                  "line": 17,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 10,
                  "index": 422,
                  "line": 17,
                },
              },
              "openingElement": Node {
                "attributes": [
                  Node {
                    "end": 462,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 50,
                        "index": 462,
                        "line": 17,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 26,
                        "index": 438,
                        "line": 17,
                      },
                    },
                    "name": Node {
                      "end": 444,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 32,
                          "index": 444,
                          "line": 17,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 26,
                          "index": 438,
                          "line": 17,
                        },
                      },
                      "name": "object",
                      "start": 438,
                      "type": "JSXIdentifier",
                    },
                    "start": 438,
                    "type": "JSXAttribute",
                    "value": Node {
                      "end": 462,
                      "expression": Node {
                        "end": 461,
                        "loc": SourceLocation {
                          "end": Position {
                            "column": 49,
                            "index": 461,
                            "line": 17,
                          },
                          "filename": undefined,
                          "identifierName": undefined,
                          "start": Position {
                            "column": 34,
                            "index": 446,
                            "line": 17,
                          },
                        },
                        "properties": [
                          Node {
                            "computed": false,
                            "end": 459,
                            "key": Node {
                              "end": 452,
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 40,
                                  "index": 452,
                                  "line": 17,
                                },
                                "filename": undefined,
                                "identifierName": "name",
                                "start": Position {
                                  "column": 36,
                                  "index": 448,
                                  "line": 17,
                                },
                              },
                              "name": "name",
                              "start": 448,
                              "type": "Identifier",
                            },
                            "loc": SourceLocation {
                              "end": Position {
                                "column": 47,
                                "index": 459,
                                "line": 17,
                              },
                              "filename": undefined,
                              "identifierName": undefined,
                              "start": Position {
                                "column": 36,
                                "index": 448,
                                "line": 17,
                              },
                            },
                            "method": false,
                            "shorthand": false,
                            "start": 448,
                            "type": "ObjectProperty",
                            "value": Node {
                              "end": 459,
                              "extra": {
                                "raw": "'foo'",
                                "rawValue": "foo",
                              },
                              "loc": SourceLocation {
                                "end": Position {
                                  "column": 47,
                                  "index": 459,
                                  "line": 17,
                                },
                                "filename": undefined,
                                "identifierName": undefined,
                                "start": Position {
                                  "column": 42,
                                  "index": 454,
                                  "line": 17,
                                },
                              },
                              "start": 454,
                              "type": "StringLiteral",
                              "value": "foo",
                            },
                          },
                        ],
                        "start": 446,
                        "type": "ObjectExpression",
                      },
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 50,
                          "index": 462,
                          "line": 17,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 33,
                          "index": 445,
                          "line": 17,
                        },
                      },
                      "start": 445,
                      "type": "JSXExpressionContainer",
                    },
                  },
                ],
                "end": 465,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 53,
                    "index": 465,
                    "line": 17,
                  },
                  "filename": undefined,
                  "identifierName": undefined,
                  "start": Position {
                    "column": 10,
                    "index": 422,
                    "line": 17,
                  },
                },
                "name": Node {
                  "end": 437,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 25,
                      "index": 437,
                      "line": 17,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 11,
                      "index": 423,
                      "line": 17,
                    },
                  },
                  "name": "ComponentBlock",
                  "start": 423,
                  "type": "JSXIdentifier",
                },
                "selfClosing": true,
                "start": 422,
                "type": "JSXOpeningElement",
              },
              "start": 422,
              "type": "JSXElement",
            },
          ],
          "callee": Node {
            "computed": false,
            "end": 410,
            "loc": SourceLocation {
              "end": Position {
                "column": 58,
                "index": 410,
                "line": 16,
              },
              "filename": undefined,
              "identifierName": undefined,
              "start": Position {
                "column": 8,
                "index": 360,
                "line": 16,
              },
            },
            "object": Node {
              "arguments": [
                Node {
                  "arguments": [
                    Node {
                      "end": 401,
                      "extra": {
                        "raw": "'root'",
                        "rawValue": "root",
                      },
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 49,
                          "index": 401,
                          "line": 16,
                        },
                        "filename": undefined,
                        "identifierName": undefined,
                        "start": Position {
                          "column": 43,
                          "index": 395,
                          "line": 16,
                        },
                      },
                      "start": 395,
                      "type": "StringLiteral",
                      "value": "root",
                    },
                  ],
                  "callee": Node {
                    "computed": false,
                    "end": 394,
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 42,
                        "index": 394,
                        "line": 16,
                      },
                      "filename": undefined,
                      "identifierName": undefined,
                      "start": Position {
                        "column": 19,
                        "index": 371,
                        "line": 16,
                      },
                    },
                    "object": Node {
                      "end": 379,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 27,
                          "index": 379,
                          "line": 16,
                        },
                        "filename": undefined,
                        "identifierName": "document",
                        "start": Position {
                          "column": 19,
                          "index": 371,
                          "line": 16,
                        },
                      },
                      "name": "document",
                      "start": 371,
                      "type": "Identifier",
                    },
                    "property": Node {
                      "end": 394,
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 42,
                          "index": 394,
                          "line": 16,
                        },
                        "filename": undefined,
                        "identifierName": "getElementById",
                        "start": Position {
                          "column": 28,
                          "index": 380,
                          "line": 16,
                        },
                      },
                      "name": "getElementById",
                      "start": 380,
                      "type": "Identifier",
                    },
                    "start": 371,
                    "type": "MemberExpression",
                  },
                  "end": 402,
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 50,
                      "index": 402,
                      "line": 16,
                    },
                    "filename": undefined,
                    "identifierName": undefined,
                    "start": Position {
                      "column": 19,
                      "index": 371,
                      "line": 16,
                    },
                  },
                  "start": 371,
                  "type": "CallExpression",
                },
              ],
              "callee": Node {
                "end": 370,
                "loc": SourceLocation {
                  "end": Position {
                    "column": 18,
                    "index": 370,
                    "line": 16,
                  },
                  "filename": undefined,
                  "identifierName": "createRoot",
                  "start": Position {
                    "column": 8,
                    "index": 360,
                    "line": 16,
                  },
                },
                "name": "createRoot",
                "start": 360,
                "type": "Identifier",
              },
              "end": 403,
              "loc": SourceLocation {
                "end": Position {
                  "column": 51,
                  "index": 403,
                  "line": 16,
                },
                "filename": undefined,
                "identifierName": undefined,
                "start": Position {
                  "column": 8,
                  "index": 360,
                  "line": 16,
                },
              },
              "start": 360,
              "type": "CallExpression",
            },
            "property": Node {
              "end": 410,
              "loc": SourceLocation {
                "end": Position {
                  "column": 58,
                  "index": 410,
                  "line": 16,
                },
                "filename": undefined,
                "identifierName": "render",
                "start": Position {
                  "column": 52,
                  "index": 404,
                  "line": 16,
                },
              },
              "name": "render",
              "start": 404,
              "type": "Identifier",
            },
            "start": 360,
            "type": "MemberExpression",
          },
          "end": 475,
          "loc": SourceLocation {
            "end": Position {
              "column": 9,
              "index": 475,
              "line": 18,
            },
            "filename": undefined,
            "identifierName": undefined,
            "start": Position {
              "column": 8,
              "index": 360,
              "line": 16,
            },
          },
          "start": 360,
          "type": "CallExpression",
        },
        "loc": SourceLocation {
          "end": Position {
            "column": 10,
            "index": 476,
            "line": 18,
          },
          "filename": undefined,
          "identifierName": undefined,
          "start": Position {
            "column": 8,
            "index": 360,
            "line": 16,
          },
        },
        "start": 360,
        "type": "ExpressionStatement",
      },
    ],
    "directives": [],
    "end": 483,
    "interpreter": null,
    "loc": SourceLocation {
      "end": Position {
        "column": 6,
        "index": 483,
        "line": 19,
      },
      "filename": undefined,
      "identifierName": undefined,
      "start": Position {
        "column": 0,
        "index": 0,
        "line": 1,
      },
    },
    "sourceType": "module",
    "start": 0,
    "type": "Program",
  },
  "start": 0,
  "type": "File",
}
`;
